[gd_scene load_steps=5 format=3 uid="uid://bdgpsvncw3e8e"]

[ext_resource type="Texture2D" uid="uid://54bbmmbrcy0" path="res://Sprites/ui/relics/Blue Orb.png" id="1_6awrg"]
[ext_resource type="Script" path="res://Scenes/ui/RelicForSale.gd" id="1_gpyhi"]
[ext_resource type="FontFile" uid="uid://35ubclsxhjgd" path="res://Fonts/lunchds.ttf" id="2_dn0mr"]
[ext_resource type="PackedScene" uid="uid://byt5jsdywffm7" path="res://Scenes/ui/Tooltip.tscn" id="4_02pvk"]

[node name="RelicForSale" type="Control"]
light_mask = 6
custom_minimum_size = Vector2(240, 342)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1680.0
offset_bottom = -738.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gpyhi")

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(127, 131)
scale = Vector2(6, 6)
texture = ExtResource("1_6awrg")

[node name="CostLabel" type="RichTextLabel" parent="Sprite"]
clip_contents = false
offset_left = -21.0
offset_top = 19.0
offset_right = 21.0
offset_bottom = 37.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/normal_font = ExtResource("2_dn0mr")
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "[center]32[img=16]res://Sprites/ui/rewardIcons/gold.png[/img]"

[node name="Tooltip" parent="." instance=ExtResource("4_02pvk")]
layout_mode = 1
offset_left = 301.0
offset_top = 23.0
offset_right = 493.0
offset_bottom = 103.0

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
